--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<p class="view">by {{ page.title }}</p>
+<h1 class="view">by {{ page.title }}</h1>
 <small>{{ page.date | date: "%-d %B %Y" }}</small>
 
 <p class="view">by {{ page.author | default: site.author }}</p>
